<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/details_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/purple_500"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_name" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/details_toolbar"
        tools:layout_editor_absoluteX="-144dp">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/titreAliment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="arial"
                    android:text="@string/aberration"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/prixAliment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:text="@string/aber_prix"
                    app:lineHeight="20dp" />

                <TextView
                    android:id="@+id/descriptionAliment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aber_desc" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RatingBar
                    android:id="@+id/note"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="44dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="30dp"
                    android:numStars="4"
                    android:progressTint="#673AB7"
                    android:rating="4"
                    android:stepSize="0.1"
                    android:textAlignment="textEnd"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:isIndicator="true"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="1.0">

        <ImageButton
            android:id="@+id/bouton1"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="12dp"
            android:backgroundTint="#6200ED"
            android:contentDescription="@string/bouton1"
            android:onClick="onClickButton1"
            app:srcCompat="@drawable/internet_32" />

        <Button
            android:id="@+id/button2"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="12dp"
            android:backgroundTint="@color/purple_500"
            android:onClick="onClickButton2"
            android:text="@string/bouton2"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#FFF" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>