<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NouvelArticleActivity">



    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        android:paddingHorizontal="45dp"
        android:paddingTop="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_marginVertical="20dp"
            android:textSize="24sp"
            android:layout_height="wrap_content"
            android:text="@string/titre_nouvel_article"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="25dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:layout_weight="1"
                android:text="@string/label_nom"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/et_nom"
                android:layout_width="180dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/label_nom" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="25dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:layout_weight="1"
                android:text="@string/label_description"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/et_desc"
                android:layout_width="180dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/label_description" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="25dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:layout_weight="1"
                android:text="@string/label_url"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/et_url"
                android:layout_width="180dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/label_url" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="25dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:layout_weight="1"
                android:text="@string/label_prix"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/et_prix"
                android:layout_width="180dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/label_prix"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="25dp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="25dp"
                android:layout_weight="1"
                android:text="@string/label_degre_envie"
                android:textColor="@color/black" />

            <RatingBar
                android:id="@+id/et_envie"
                android:layout_width="173dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:contentDescription="@string/label_degre_envie"
                android:numStars="4" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_ajouter"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:textSize="20dp"
            android:layout_marginHorizontal="20dp"
            android:text="Ajouter" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>